Make model adjustments, implement password reset and shelter registration
