# mobile_api/serializers/__init__.py
@@ -1,3 +1,4 @@
-from .registration import RegisterSerializer, VerifySerializer
+from .registration import RegisterSerializer, RegisterShelterSerializer, VerifySerializer
 from .login import LoginSerializer
 from .authenticated import *
+from .password_reset import PasswordResetRequestSerializer, PasswordResetCodeVerifySerializer, PasswordResetConfirmSerializer
