# mobile_api/serializers/registration.py
@@ -1,52 +1,58 @@
 from rest_framework import serializers
-from django.db import IntegrityError
 from django.contrib.auth.models import User
-from django.core.validators import RegexValidator
+from django.core.validators import RegexValidator, validate_email
 from django.contrib.auth.password_validation import validate_password
-from pet_welfare.models import Profile
-from mobile_api.utils import send_verification_email
+from pet_welfare.models import Profile, ShelterProfile
+from mobile_api.utils import send_verification_email, validate_name
+from mobile_api.constants import NameTypes
+from mobile_api.messages import USER_EXISTS, INVALID_PHONE, PHONE_EXISTS, SHELTER_EXISTS
 
-class RegisterSerializer(serializers.ModelSerializer):
+class RegisterSerializer(serializers.Serializer):
+    email = serializers.CharField(required=True, validators=[validate_email])
+    first_name = serializers.CharField(required=True, validators=[lambda value: validate_name(value, name_type=NameTypes.FIRST_NAME)])
+    last_name = serializers.CharField(required=True, validators=[lambda value: validate_name(value, name_type=NameTypes.LAST_NAME)])
     phone = serializers.CharField(
         required=False,
         allow_blank=True,
-        validators=[RegexValidator(regex=r'^\+?1?\d{9,15}$', message="Enter a valid phone number.")],
+        validators=[RegexValidator(regex=r'^\+?1?\d{9,15}$', message=INVALID_PHONE)],
     )
     password = serializers.CharField(write_only=True, required=True, validators=[validate_password])
 
-    class Meta:
-        model = User
-        fields = ['first_name', 'last_name', 'email', 'password', 'phone']
-        extra_kwargs = {'password': {'write_only': True}}
+    def validate_email(self, value):
+        if User.objects.filter(email=value).exists():
+            raise serializers.ValidationError(USER_EXISTS)
+        return value
+    
+    def validate_phone(self, value):
+        if Profile.objects.filter(phone=value).exists():
+            raise serializers.ValidationError(PHONE_EXISTS)
+        return value
+
+class RegisterShelterSerializer(serializers.Serializer):
+    email = serializers.EmailField(required=True)
+    name = serializers.CharField(required=True, validators=[lambda value: validate_name(value, name_type=NameTypes.SHELTER_NAME)])
+    registration_number = serializers.CharField(max_length=50)
+    phone = serializers.CharField(
+        required=False,
+        allow_blank=True,
+        validators=[RegexValidator(regex=r'^\+?1?\d{9,15}$', message=INVALID_PHONE)],
+    )
+    password = serializers.CharField(write_only=True, required=True, validators=[validate_password])
 
     def validate_email(self, value):
         if User.objects.filter(email=value).exists():
-            raise serializers.ValidationError("A user with this email already exists.")
+            raise serializers.ValidationError(USER_EXISTS)
         return value
-
-    def create(self, validated_data):
-        phone = validated_data.pop('phone', None)
-
-        try:
-            user = User.objects.create_user(
-                username=validated_data['email'],
-                email=validated_data['email'],
-                first_name=validated_data['first_name'],
-                last_name=validated_data['last_name'],
-                password=validated_data['password']
-            )
-            user.is_active = False
-            user.save()
-
-            profile = Profile.objects.create(user=user, phone=phone)
-            verification_code = profile.generate_verification_code()
-
-            send_verification_email(user.email, verification_code)
-
-            return user
-
-        except IntegrityError:
-            raise serializers.ValidationError({"email": "A user with this email already exists."})
+    
+    def validate_phone(self, value):
+        if Profile.objects.filter(phone=value).exists():
+            raise serializers.ValidationError(PHONE_EXISTS)
+        return value
+    
+    def validate_registration_number(self, value):
+        if ShelterProfile.objects.filter(registration_number=value).exists():
+            raise serializers.ValidationError(SHELTER_EXISTS)
+        return value
 
 class VerifySerializer(serializers.Serializer):
     email = serializers.EmailField()
