# mobile_api/views/__init__.py
@@ -1,3 +1,4 @@
-from .registration import RegisterView, VerifyView
+from .registration import RegisterView, RegisterShelterView, VerifyView
 from .login import LoginView
 from .authenticated import *
+from .password_reset import PasswordResetRequestView, PasswordResetCodeVerifyView, PasswordResetConfirmView
